[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/textures/player/icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/character.gd" type="Script" id=2]
[ext_resource path="res://addons/scene/joystick.tscn" type="PackedScene" id=3]

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=10]
gradient = SubResource( 9 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0, 0 )

[sub_resource type="Gradient" id=14]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=15]
gradient = SubResource( 14 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.571429, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Position2D/CPUParticles2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.227451, 0.196078, 0.196078, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player/small light:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Player/player glow:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "glow"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.4, 2.3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Position2D/CPUParticles2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.227451, 0.196078, 0.196078, 1 ), Color( 0.152941, 0.160784, 0.219608, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player/small light:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2.2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Player/player glow:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.8 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Menu:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Menu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Menu/None/Label:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Menu/Joystick/Label:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/Menu/buttons/Label:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/ColorRect:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CanvasLayer/CompleteText:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CanvasLayer/Menu/None/Label2:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("CanvasLayer/CompleteText:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
resource_name = "end"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/CompleteText:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/CompleteText:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=12]
resource_name = "start_timer"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Menu:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Menu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Menu/None/Label:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Menu/Joystick/Label:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/Menu/buttons/Label:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/Menu/None/Label2:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MazeGame" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
scale = Vector2( 1.25, 1.25 )
script = ExtResource( 2 )

[node name="small light" type="Light2D" parent="Player"]
light_mask = 2
position = Vector2( 251.6, 200 )
scale = Vector2( 13.4375, 7.9625 )
texture = SubResource( 10 )
energy = 0.0

[node name="Sprite" type="Sprite" parent="Player"]
light_mask = 3
position = Vector2( 253, 198 )
texture = ExtResource( 1 )

[node name="player glow" type="Light2D" parent="Player"]
light_mask = 3
position = Vector2( 252.8, 198.8 )
scale = Vector2( 1.025, 1.0375 )
texture = SubResource( 15 )
energy = 0.0
mode = 1

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 253, 200 )
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 253, 198 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="Player"]
position = Vector2( 255.6, 199.6 )
scale = Vector2( 0.419141, 514.4 )
texture = SubResource( 5 )
energy = 0.4

[node name="Overlay" type="ColorRect" parent="Player"]
light_mask = 3
margin_left = -186.0
margin_top = -57.0
margin_right = 668.0
margin_bottom = 466.0
color = Color( 0, 0, 0, 0.705882 )

[node name="Position2D" type="Position2D" parent="Player"]
position = Vector2( 252.8, 200 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player/Position2D"]
position = Vector2( 3.2, -264 )
amount = 64
lifetime = 10.0
emission_shape = 2
emission_rect_extents = Vector2( 512, 1 )
angle = 90.0
angle_random = 1.0
scale_amount = 2.0
scale_amount_random = 1.0
color = Color( 0.227451, 0.196078, 0.196078, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SprintBar" type="ProgressBar" parent="CanvasLayer"]
margin_left = 10.0
margin_top = 19.0
margin_right = 260.0
margin_bottom = 89.0
value = 100.0
rounded = true

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 0.1
autostart = true

[node name="joystick" parent="CanvasLayer" instance=ExtResource( 3 )]
self_modulate = Color( 0.239216, 0.231373, 0.270588, 1 )
position = Vector2( 3000, 475 )

[node name="Label" type="Label" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 21.0
margin_top = 96.0
margin_right = 86.0
margin_bottom = 110.0
text = "0 seconds"

[node name="SprintButton" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 875.0
margin_top = 446.0
margin_right = 949.0
margin_bottom = 508.0
toggle_mode = true
text = "Sprint"

[node name="Position2D" type="Position2D" parent="CanvasLayer"]
visible = false
position = Vector2( -788, -9 )

[node name="Up" type="Button" parent="CanvasLayer/Position2D"]
margin_left = 873.0
margin_top = 402.0
margin_right = 942.0
margin_bottom = 453.0
text = "Up"

[node name="Down" type="Button" parent="CanvasLayer/Position2D"]
margin_left = 873.0
margin_top = 514.0
margin_right = 942.0
margin_bottom = 565.0
text = "Down"

[node name="Left" type="Button" parent="CanvasLayer/Position2D"]
margin_left = 797.0
margin_top = 459.0
margin_right = 866.0
margin_bottom = 510.0
text = "Left"

[node name="Right" type="Button" parent="CanvasLayer/Position2D"]
margin_left = 947.0
margin_top = 459.0
margin_right = 1016.0
margin_bottom = 510.0
text = "Right"

[node name="Menu" type="TabContainer" parent="CanvasLayer"]
margin_left = 765.0
margin_top = 17.0
margin_right = 1011.0
margin_bottom = 77.0

[node name="None" type="Tabs" parent="CanvasLayer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="CanvasLayer/Menu/None"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -7.0
margin_right = 94.0
margin_bottom = 7.0
text = "Select Mobile Controls Above"

[node name="Label2" type="Label" parent="CanvasLayer/Menu/None"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = 508.0
margin_right = 120.0
margin_bottom = 522.0
text = "Move with arrow keys, press [S] key to sprint."

[node name="Joystick" type="Tabs" parent="CanvasLayer/Menu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="CanvasLayer/Menu/Joystick"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.5
margin_top = -7.0
margin_right = 105.5
margin_bottom = 7.0
text = "Mobile Joystick controls selected"

[node name="buttons" type="Tabs" parent="CanvasLayer/Menu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="CanvasLayer/Menu/buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -7.0
margin_right = 103.5
margin_bottom = 7.0
text = "Mobile Button Controls Selected"

[node name="EnergyText" type="Label" parent="CanvasLayer"]
margin_left = 69.0
margin_top = 46.0
margin_right = 115.0
margin_bottom = 60.0
text = "Energy:"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -442.0
margin_top = -295.0
margin_right = 1395.0
margin_bottom = 821.0
color = Color( 0, 0, 0, 1 )

[node name="CompleteText" type="Label" parent="CanvasLayer"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -338.0
margin_top = -27.0
margin_right = -129.0
margin_bottom = -13.0
rect_scale = Vector2( 3.2, 3.2 )
text = "Maze Complete in 23.1 seconds!"
align = 1
valign = 1

[node name="GLOW" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/glow = SubResource( 7 )

[node name="GUI" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/end = SubResource( 13 )
anims/start_timer = SubResource( 12 )

[connection signal="timeout" from="CanvasLayer/Timer" to="Player" method="_on_Timer_timeout"]
[connection signal="button_down" from="CanvasLayer/SprintButton" to="Player" method="_on_SprintButton_button_down"]
[connection signal="button_up" from="CanvasLayer/SprintButton" to="Player" method="_on_SprintButton_button_up"]
[connection signal="tab_changed" from="CanvasLayer/Menu" to="Player" method="_on_Menu_tab_changed"]
